# programming-rust-2nd-edition

./: .gitignore  README.md
Chapter11-TraitsAndGenerics/chapter11-code-examples/: Cargo.toml
Chapter11-TraitsAndGenerics/chapter11-code-examples/src/: main.rs
Chapter21-Macros/chapter-21-code-examples/: Cargo.toml
Chapter21-Macros/chapter-21-code-examples/src/: main.rs
Chapter21-Macros/macros/src/: lib.rs
Chapter22-UnsafeCode/: crash.rs
Chapter22-UnsafeCode/ascii-example/: Cargo.toml
Chapter22-UnsafeCode/ascii-example/src/: main.rs
Chapter22-UnsafeCode/raw-pointers/: Cargo.toml
Chapter22-UnsafeCode/raw-pointers/src/: main.rs
Chapter2_ATourOfRust/actix-gcd/: Cargo.toml
Chapter2_ATourOfRust/actix-gcd/src/: main.rs
Chapter2_ATourOfRust/gcd/src/: main.rs
Chapter2_ATourOfRust/mandelbrot/: Cargo.toml
Chapter2_ATourOfRust/mandelbrot-parallel/: Cargo.toml
Chapter2_ATourOfRust/mandelbrot-parallel/src/: main.rs
Chapter2_ATourOfRust/mandelbrot/src/: main.rs
Chapter2_ATourOfRust/quickreplace/: Cargo.toml
Chapter2_ATourOfRust/quickreplace/src/: main.rs
Chapter3_Fundamental_Types/types/src/: main.rs
Chapter4-OwnershipandMoves/code_examples_ownership_and_moves/: Cargo.toml
Chapter5-References/code_examples_references/: Cargo.toml
Chapter6-Expressions/code-examples/: Cargo.toml
Chapter8-Structs/chapter-8-examples/: Cargo.toml  tmp.txt
Chapter9-EnumsAndPatterns/chapter9-code-examples/: Cargo.toml
Closures-FromRustLangBook/cached-closure/: Cargo.toml
Closures-FromRustLangBook/learning-closures/: Cargo.toml
(+8 files in other folders)
