[package]
name = "actix-gcd"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "1.0.8"
serde ={ version = "1.0", features = ["derive"]}
chrono = { version = "= 0.4.29" } # This had to be added due to a compilation failure. See https://github.com/actix/actix-web/issues/3135#issuecomment-1718491296
